--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
-
+          registry-url: 'https://registry.npmjs.org'
+          scope: '@greifmatthias'
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
 
@@ -24,5 +25,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: |
-          yarn release
+        run: yarn release
