--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,8 @@
     "noImplicitAny": true,
     "rootDir": "./src",
     "skipLibCheck": true,
+    "allowJs": true,
     "target": "es5"
   },
-  "include": [
-    "src/**/*"
-  ],
+  "include": ["src/**/*"]
 }
