--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,14 +15,17 @@ jobs:
       - name: Use Node.js 16
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 16.x
           registry-url: 'https://registry.npmjs.org'
           scope: '@greifmatthias'
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
 
       - name: Create Release
+        run: yarn release
+
+      - name: Publish
+        run: npm publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: yarn release
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
