--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,25 +7,22 @@ jobs:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, 'ci skip') && !contains(github.event.head_commit.message, 'skip ci')"
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
       - name: Prepare repository
         run: git fetch --unshallow --tags
 
-      - name: Use Node.js 16
+      - name: Use Node.js 18
         uses: actions/setup-node@v3
         with:
-          node-version: 16.x
-          registry-url: 'https://registry.npmjs.org'
-          scope: '@greifmatthias'
+          node-version: 18
+
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
 
       - name: Create Release
-        run: yarn release
-
-      - name: Publish
-        run: npm publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+          yarn release
