--- a/package.json
+++ b/package.json
@@ -74,12 +74,12 @@
     "zx": "7.1.1"
   },
   "peerDependencies": {
-    "@storybook/addons": "6.5.8",
-    "@storybook/api": "6.5.8",
-    "@storybook/components": "6.5.8",
-    "@storybook/core-events": "6.5.8",
-    "@storybook/theming": "6.5.8",
-    "react": "16.8.0 || 17.0.0",
+    "@storybook/addons": "6.5.15",
+    "@storybook/api": "6.5.15",
+    "@storybook/components": "6.5.15",
+    "@storybook/core-events": "6.5.15",
+    "@storybook/theming": "6.5.15",
+    "react": "16.8.0 || 17.0.0 || 18.0.0",
     "react-dom": "16.8.0 || 17.0.0 || 18.0.0"
   },
   "peerDependenciesMeta": {
